@@ -324,7 +324,7 @@ public class DynamicReportBuilder {
 	}
 
 	public DynamicReportBuilder setHeaderHeight(int height) {
-		options.setHeaderHeight(Integer.valueOf(height));
+		options.setHeaderHeight(new Integer(height));
 		return this;
 	}
 
@@ -349,12 +349,12 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addFooterHeight(int height) {
-		options.setFooterHeight(Integer.valueOf(height));
+		options.setFooterHeight(new Integer(height));
 		return this;
 	}
 
 	public DynamicReportBuilder setFooterHeight(int height) {
-		options.setFooterHeight(Integer.valueOf(height));
+		options.setFooterHeight(new Integer(height));
 		return this;
 	}
 
@@ -379,12 +379,12 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addDetailHeight(int height) {
-		options.setDetailHeight(Integer.valueOf(height));
+		options.setDetailHeight(new Integer(height));
 		return this;
 	}
 
 	public DynamicReportBuilder setDetailHeight(int height) {
-		options.setDetailHeight(Integer.valueOf(height));
+		options.setDetailHeight(new Integer(height));
 		return this;
 	}
 
@@ -409,12 +409,12 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addLeftMargin(int margin) {
-		options.setLeftMargin(Integer.valueOf(margin));
+		options.setLeftMargin(new Integer(margin));
 		return this;
 	}
 
 	public DynamicReportBuilder setLeftMargin(int margin) {
-		options.setLeftMargin(Integer.valueOf(margin));
+		options.setLeftMargin(new Integer(margin));
 		return this;
 	}
 
@@ -439,12 +439,12 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addRightMargin(int margin) {
-		options.setRightMargin(Integer.valueOf(margin));
+		options.setRightMargin(new Integer(margin));
 		return this;
 	}
 
 	public DynamicReportBuilder setRightMargin(int margin) {
-		options.setRightMargin(Integer.valueOf(margin));
+		options.setRightMargin(new Integer(margin));
 		return this;
 	}
 
@@ -469,11 +469,11 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addTopMargin(int margin) {
-		options.setTopMargin(Integer.valueOf(margin));
+		options.setTopMargin(new Integer(margin));
 		return this;
 	}
 	public DynamicReportBuilder setTopMargin(int margin) {
-		options.setTopMargin(Integer.valueOf(margin));
+		options.setTopMargin(new Integer(margin));
 		return this;
 	}
 
@@ -497,11 +497,11 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addBottomMargin(int margin) {
-		options.setBottomMargin(Integer.valueOf(margin));
+		options.setBottomMargin(new Integer(margin));
 		return this;
 	}
 	public DynamicReportBuilder setBottomMargin(int margin) {
-		options.setBottomMargin(Integer.valueOf(margin));
+		options.setBottomMargin(new Integer(margin));
 		return this;
 	}
 
@@ -525,17 +525,17 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addColumnsPerPage(int numColumns) {
-		options.setColumnsPerPage(Integer.valueOf(numColumns));
+		options.setColumnsPerPage(new Integer(numColumns));
 		return this;
 	}
 	public DynamicReportBuilder setColumnsPerPage(int numColumns) {
-		options.setColumnsPerPage(Integer.valueOf(numColumns));
+		options.setColumnsPerPage(new Integer(numColumns));
 		return this;
 	}
 
 	public DynamicReportBuilder setColumnsPerPage(int numColumns, int columnSpace) {
-		options.setColumnsPerPage(Integer.valueOf(numColumns));
-		options.setColumnSpace(Integer.valueOf(columnSpace));
+		options.setColumnsPerPage(new Integer(numColumns));
+		options.setColumnSpace(new Integer(columnSpace));
 		return this;
 	}
 	public DynamicReportBuilder setColumnsPerPage(Integer numColumns, Integer columnSpace) {
@@ -563,11 +563,11 @@ public class DynamicReportBuilder {
 	 * @return
 	 */
 	public DynamicReportBuilder addColumnSpace(int columSpace) {
-		options.setColumnSpace(Integer.valueOf(columSpace));
+		options.setColumnSpace(new Integer(columSpace));
 		return this;
 	}
 	public DynamicReportBuilder setColumnSpace(int columSpace) {
-		options.setColumnSpace(Integer.valueOf(columSpace));
+		options.setColumnSpace(new Integer(columSpace));
 		return this;
 	}
 
@@ -859,20 +859,20 @@ public class DynamicReportBuilder {
 	 */
 	public DynamicReportBuilder addMargins(int top, int bottom, int left, int right) {
 
-		options.setTopMargin(Integer.valueOf(top));
-		options.setBottomMargin(Integer.valueOf(bottom));
-		options.setLeftMargin(Integer.valueOf(left));
-		options.setRightMargin(Integer.valueOf(right));
+		options.setTopMargin(new Integer(top));
+		options.setBottomMargin(new Integer(bottom));
+		options.setLeftMargin(new Integer(left));
+		options.setRightMargin(new Integer(right));
 
 		return this;
 	}
 
 	public DynamicReportBuilder setMargins(int top, int bottom, int left, int right) {
 
-		options.setTopMargin(Integer.valueOf(top));
-		options.setBottomMargin(Integer.valueOf(bottom));
-		options.setLeftMargin(Integer.valueOf(left));
-		options.setRightMargin(Integer.valueOf(right));
+		options.setTopMargin(new Integer(top));
+		options.setBottomMargin(new Integer(bottom));
+		options.setLeftMargin(new Integer(left));
+		options.setRightMargin(new Integer(right));
 
 		return this;
 	}
@@ -964,7 +964,7 @@ public class DynamicReportBuilder {
 	 */
 
 	public DynamicReportBuilder addSubreportInGroupFooter(int groupNumber, Subreport subreport) {
-		Integer groupNum = Integer.valueOf(groupNumber);
+		Integer groupNum = new Integer(groupNumber);
 		List list = (List) groupFooterSubreports.get(groupNum);
 		if (list == null) {
 			list = new ArrayList();
@@ -994,7 +994,7 @@ public class DynamicReportBuilder {
 	}
 
 	public DynamicReportBuilder addSubreportInGroupHeader(int groupNumber, Subreport subreport) {
-		Integer groupNum = Integer.valueOf(groupNumber);
+		Integer groupNum = new Integer(groupNumber);
 		List list = (List) groupHeaderSubreports.get(groupNum);
 		if (list == null) {
 			list = new ArrayList();
